packages/next-swc/crates/core/tests/errors/server-actions/5/output.js
/* __next_internal_action_entry_do_not_use__  */ export * from 'foo';
import ensureServerEntryExports from "private-next-rsc-action-proxy";
ensureServerEntryExports([]);
